--- a/dashboard.html
+++ b/dashboard.html
@@ -284,7 +284,7 @@
                     // Attach event listener for first user interaction
                     document.addEventListener("click", () => {
                         audio.play();
-                    }, { once: false });
+                    }, { once: true });
                 });
             }
         }
